<resources>
    <string name="app_name">Hipotenochas</string>
    <string name="tituloIns">INSTRUCCIONES</string>
    <string name="textoIns">El juego consiste en despejar todas las casillas de una pantalla que no oculten una mina.  Algunas casillas tienen un número, este número indica las minas que son en todas las casillas circundantes. Así, si una casilla tiene el número 3, significa que de las ocho casillas que hay alrededor (si no es en una esquina o borde) hay 3 con minas y 5 sin minas. Si se descubre una casilla sin número indica que ninguna de las casillas vecinas tiene mina y estas se descubren automáticamente.  Si se descubre una casilla con una mina se pierde la partida.  Se puede poner una marca en las casillas que el jugador piensa que hay minas para ayudar a descubrir la que están cerca.</string>
   <string name="radioTitulo">Escoge tu personaje</string>
    <string name="radioButton1">Mario</string>
    <string name="radioButton2">Luigi</string>
    <string name="radioButton3">Peach</string>
    <string name="menu1">Instrucciones</string>
    <string name="menu2">Nuevo Juego</string>
    <string name="menu3">Configura el juego</string>
    <string name="menu4">Seleccionar personaje</string>
    <string name="hipotenochas">HIPOTENOCHAS</string>
    <string name="tituloGanador">¡🎉 HAS GANADO 🎉!</string>
    <string name="tituloPerdedor">¡ HAS PERDIDO !</string>
    <string name="consejoBoton">Pulsa el boton para volver al menú principal</string>
    <string name="textoBoton">VOLVER</string>
    <string name="textoEjemploDescripcion">hola :)</string>


</resources>