<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="80dp"
        android:text="@string/radioTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="164dp"
        android:layout_height="499dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/mario"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clic"
            android:text="@string/radioButton1" />

        <RadioButton
            android:id="@+id/luigi"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clic"
            android:text="@string/radioButton2" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="clic"
            android:text="@string/radioButton3" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="113dp"
        android:layout_height="143dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="53dp"
        android:contentDescription="@string/textoEjemploDescripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mario" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="136dp"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="277dp"
        android:contentDescription="@string/textoEjemploDescripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:srcCompat="@drawable/luigi" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="147dp"
        android:layout_height="216dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="76dp"
        android:contentDescription="@string/textoEjemploDescripcion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/peach" />

</androidx.constraintlayout.widget.ConstraintLayout>